styling and alignment fixes

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -228,7 +228,7 @@ body {
 }
 
 .glow-on-hover:active {
-    color: #000
+    color: #ffffff
 }
 
 .glow-on-hover:active:after {
